--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,10 +20,12 @@
     "expo": "~54.0.12",
     "expo-build-properties": "^1.0.9",
     "expo-camera": "^17.0.8",
+    "expo-clipboard": "^8.0.7",
     "expo-crypto": "^15.0.7",
     "expo-dev-client": "^6.0.13",
     "expo-device": "^8.0.9",
     "expo-image-picker": "^17.0.8",
+    "expo-linear-gradient": "^15.0.7",
     "expo-media-library": "^18.2.0",
     "expo-notifications": "^0.32.12",
     "expo-status-bar": "~3.0.8",
