--- a/frontend/eas.json
+++ b/frontend/eas.json
@@ -7,6 +7,11 @@
     "development": {
       "developmentClient": true,
       "distribution": "internal",
+      "env": {
+        "EXPO_ANDROID_COMPILE_SDK_VERSION": "35",
+        "EXPO_ANDROID_TARGET_SDK_VERSION": "35",
+        "EXPO_ANDROID_BUILD_TOOLS_VERSION": "35.0.0"
+      },
       "ios": {
         "simulator": false
       },
@@ -16,10 +21,20 @@
       }
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "EXPO_ANDROID_COMPILE_SDK_VERSION": "35",
+        "EXPO_ANDROID_TARGET_SDK_VERSION": "35",
+        "EXPO_ANDROID_BUILD_TOOLS_VERSION": "35.0.0"
+      }
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "env": {
+        "EXPO_ANDROID_COMPILE_SDK_VERSION": "35",
+        "EXPO_ANDROID_TARGET_SDK_VERSION": "35",
+        "EXPO_ANDROID_BUILD_TOOLS_VERSION": "35.0.0"
+      }
     }
   },
   "submit": {
