--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^2.9.0",
     "@welldone-software/why-did-you-render": "^10.0.1",
     "axios": "^1.12.2",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.12",
     "expo-build-properties": "^1.0.9",
     "expo-camera": "^17.0.8",
