--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,11 +37,13 @@
     "firebase": "^12.3.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^4.1.2",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
+    "react-native-svg": "^15.14.0",
     "react-redux": "^9.2.0",
     "socket.io-client": "^4.8.1",
     "zustand": "^5.0.8"
